--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -1,3 +1,16 @@
 .button {
-  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  padding: 0 68px;
+  background-color: #7b8395;
+  font-family: "IBM Plex Mono", sans-serif;
+  font-size: 14px;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #5c6475;
+  }
 }
