--- a/src/components/articles/articles.module.scss
+++ b/src/components/articles/articles.module.scss
@@ -50,3 +50,10 @@ img {
   height: 100%;
   object-fit: cover;
 }
+
+.pageControls {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
