--- a/src/components/loader/loader.module.scss
+++ b/src/components/loader/loader.module.scss
@@ -30,6 +30,14 @@
   }
 }
 
+.layout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
 @keyframes spin {
   to {
     transform: rotate(1turn);
