--- a/src/components/sort-input/sort-input.module.scss
+++ b/src/components/sort-input/sort-input.module.scss
@@ -1,7 +1,12 @@
 .label {
-  margin-right: 25px;
+  display: flex;
+  margin-bottom: 10px;
+  cursor: pointer;
 
   input {
-    margin-left: 5px;
+    width: 18px;
+    height: 18px;
+    margin-right: 20px;
+    cursor: pointer;
   }
 }
